compile wip: finish promises

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,13 @@
         <li><a href="tests/mvc/">mvc</a></li>
         <li><a href="tests/strap/">strap</a></li>
         <li><a href="tests/multipage/">multipage</a></li>
+        <li>x</li>
+        <li><a href="tests/bind/">bind</a></li>
+        <li><a href="tests/can/">can</a></li>
+        <li><a href="tests/img/">img</a></li>
+        <li><a href="tests/stack/">stack</a></li>
+        <li>x</li>
+        <li><a href="tests/prom/">prom</a></li>
       </ul>
 
     </div>
