--- a/app/tests/prom/index.html
+++ b/app/tests/prom/index.html
@@ -14,6 +14,7 @@ and open the template in the editor.
   <body>
     <div>TODO write content</div>
     <button onclick="fn()">all</button>
+    <button onclick="fn0()">???</button>
     <button onclick="relay(fn1)">fn1()</button>
     <button onclick="relay(fn2)">fn2()</button>
     <button onclick="relay(fn3)">fn3()</button>
